# ACTIONet

./: .gitignore  .gitmodules  .pre-commit-config.yaml  ACTIONet.code-workspace  CMakeLists.txt  CNAME  Changes.txt  DESCRIPTION  Dockerfile  FEATURES.md  INSTALL.txt  MANIFEST.in  Makefile  Makevars.MKL  NAMESPACE  NAMESPACE.bak  README.md  TODO.md  add_core.sh  build_wheel.sh  changes.txt  environment.yaml  features.md  format_code.sh  mypy.ini  profile_ACTION.R  purge_core.sh  requirements.txt  run_docker.sh  setup (copy).py  setup.py  setup_helpers.py  workspace.code-workspace
.github/workflows/: actionet-r-devel.yml  actionet-r-release.yml  actionet.yml  actionet.yml~  actionet_R.yml  actionet_python.yml  actionet_python_devel.yml  actionet_python_release.yml  mini_actionet.yml
ACTIONet/: __init__.py  _misc_utils.py  config.py  main.py  misc_utils.py
ACTIONet/annotation/: __init__.py  archs.py  cells.py
ACTIONet/data/: ACTIONet_markers.tsv
ACTIONet/decomposition/: __init__.py  aa.py  action.py  actionmr.py  regression.py  spa.py  svd.py  utils.py
ACTIONet/network/: __init__.py  _build.py  _layout.py  _specificity.py  _utils.py  autocorrelation.py  build.py  centrality.py  cluster.py  core.py  diffusion.py  extras.py  layout.py  propagation.py  utils.py
ACTIONet/plotting/: __init__.py  _color.py  _palettes.py  _plot.py  color.py  palettes.py  plot.py  plot_utils.py  utils.py
ACTIONet/postprocessing/: __init__.py  archetypes.py  cells.py  clusters.py  genes.py
ACTIONet/preprocessing/: __init__.py  _action.py  _archetypes.py  _filter.py  _normalization.py  _reduction.py  _specificity.py  action.py  archetypes.py  filter.py  normalization.py  reduction.py  specificity.py
ACTIONet/tools/: __init__.py  _aa.py  _annotation.py  _enrichment.py  _imputation.py  _network_tools.py  _normalization.py  _regression.py  _spa.py  _svd.py  _utils.py  annotation.py  imputation.py  misc_utils.py  svd.py  utils_internal.py  utils_public.py
R/: ACTIONet-package.R  AllClasses.R  AllGenerics.R  AnnData_io.R  RcppExports.R  SCINET_interface.R  alignment.R  annotation.R  backbone.R  batch_correct.R  clusters.R  coerce_ace.R  combine_ace.R  data.R  decomposition.R  differential.R  doublet.R  enrichment.R  extras.R  filter.R  filter_ace.R  get_ace.R  imputation.R  io.R  main.R  marker_detection.R  network_tools.R  normalization.R  plots.R  projection.R  pseudobulk_DGE.R  qc.R  reduction.R  set_ace.R  show_ace.R  specificity.R  subset_ace.R  test.R  util.R  utils.R  (+10 more)
R/ace/: AllClasses.R
R/x/: enrichment.R
Tutorials/: ACTIONet_core_functionalities_python.ipynb  ACTIONet_core_functionalities_python_V2.ipynb
_ACTIONet/: ACTIONet.h  wrapper.cc
_ACTIONet/include/: ACTIONet.h  arma_wrapper.h
benchmark_datasets/: README.md
changelog/: generate_change_log.sh  generate_change_log.sh~  release_notes.py
cmake/: FindBLAS.cmake  FindSuiteSparse.cmake
data/: DiseaseDB.rda  Hs2Mm.rda  PanglaoDB_human_markers.rda  PanglaoDB_mouse_markers.rda  ViperRegulons.rda  curatedMarkers_human.rda  gProfilerDB_human.rda.REMOVED.git-id  gProfilerDB_mouse.rda.REMOVED.git-id  nanoStringDB_human.rda  nanoStringDB_mouse.rda
docker/: Dockerfile  Makefile
docker/files/: base_environment.yml  install_actionet.R  install_actionet.sh  install_irkernel.R  jupyter_notebook_config.py  python_env.yml  r_environment.yml
docs/: CHANGELOG.rst  FAQ.rst  INTRODUCTION.rst  INTRODUCTION.rst~  Makefile  conf.py  index.rst  requirements.txt
docs/ACTIONet/: ACTIONet.decomposition.rst  ACTIONet.network.rst  ACTIONet.plotting.rst  ACTIONet.postprocessing.rst  ACTIONet.preprocessing.rst  ACTIONet.rst  ACTIONet.tools.rst  _ACTIONet.rst  modules.rst
docs/Tutorials/: ACTIONet_core_functionalities2.nblink  index.rst  modules.rst
include/: ACTIONet.h  arma_base.h  arma_wrapper.h  base.h  my_utils.h  sfmult.h
include/ACTIONet/: actionetcore.h  arma_base.h  cryptor.hpp  mini_cblas.h  my_utils.h
include/SPAMS/: cblas_alt_template.h  (+1 more)
man/: ACTIONet.Rd  ACTIONetExperiment-class.Rd  ACTIONetExperiment.Rd  CellMarkerDB_human.Rd  CellMarkerDB_human_markers.Rd  CellMarkerDB_mouse.Rd  CellMarkerDB_mouse_markers.Rd  ChEA3plusDB.Rd  DiseaseDB.Rd  EnrichrDB.Rd  FengSVD.Rd  FengSVD_full.Rd  HDBSCAN.clustering.Rd  HalkoSVD.Rd  HalkoSVD_full.Rd  Hs2Mm.Rd  IRLB_SVD.Rd  IRLB_SVD_full.Rd  Leiden.clustering.Rd  MWM_hungarian.Rd  Monaco2019.Rd  PCA2ACTIONred.Rd  PCA2ACTIONred_full.Rd  PanglaoDB_human_markers.Rd  PanglaoDB_mouse_markers.Rd  SVD2ACTIONred.Rd  SVD2ACTIONred_full.Rd  ViperRegulons.Rd  annotate.archetypes.using.labels.Rd  annotate.archetypes.using.markers.Rd  annotate.cells.from.archetypes.using.markers.Rd  annotate.cells.using.markers.Rd  annotate.cells.using.markers.updated.Rd  annotate.clusters.using.labels.Rd  annotate.clusters.using.markers.Rd  annotate.profile.using.markers.Rd  archetypeFeatureSpecificity.Rd  assess.TF.activities.from.archetypes.Rd  assess.TF.activities.from.scores.Rd  assess.geneset.enrichment.Rd  (+152 more)
mini_docker/: Dockerfile  Makefile  run.sh
python_interface/: ACTIONet.cpp  Makefile  wrapper (copy).cc  wrapper.cc
scripts/: install_actionet.R
src/: ACTION_decomp.cc  ACTIONet.cpp  CMakeLists.txt  FengSVD.cc  HalkoSVD.cc  Makevars  Makevars.MKL  Makevars.back  Makevars.clang  Makevars.dpcpp  Makevars.gcc  Makevars_MKL.gcc  RCpp_util.cpp  README.md  RcppExports.cpp  arch.cc  my_utils.cc  reduced_kernels.cc  wrapper.cpp
tests/: ACTIONet_core_functionalities.html  ACTIONet_core_functionalities.py  ACTIONet_core_functionalities_R.Rmd  ACTIONet_core_functionalities_R.html  ACTIONet_core_functionalities_python.html  ACTIONet_core_functionalities_python.ipynb  ACTIONet_core_functionalities_python.py  Actionet_R.ipynb  QC_build_network.ipynb  QC_build_network.py  basic_run.html  basic_run.ipynb  batch_correction.html  batch_correction.ipynb  cell_annotation.html  cell_annotation.ipynb  cell_clustering.html  cell_clustering.ipynb  enrichment_qc.ipynb  extra_tests.Rmd  get_test_datasets.sh  label_correction.html  label_correction.ipynb  test.py  test_network_construction.py
travis/: build-wheels.sh
(+424 files in other folders)
